skims\fix(back): #3675.23 link nodes are required
- I assumed link nodes linked to only one node, but they do not
  and therefore we should keep them
- This solves the problem of some nodes floating alone in the dark
- All nodes must be linked to the same data-structure
- no-deltas-test


Former-commit-id: 72b08d43651adaf7bdefe992bc532c8888e073b1

--- a/skims/.gitlab-ci.yml
+++ b/skims/.gitlab-ci.yml
@@ -86,6 +86,10 @@ skims_structure:
 skims_test:
   <<: *with_nix
   <<: *skims_in_dev_branch
+  artifacts:
+    paths:
+      - skims/test/outputs/
+    when: always
   stage: test-code
 
 skims_test_infra:
