--- a/integrates/front/package.json
+++ b/integrates/front/package.json
@@ -18,34 +18,32 @@
     "@bugsnag/core": "7.3.5",
     "@bugsnag/js": "7.5.1",
     "@bugsnag/plugin-react": "7.3.5",
-    "@casl/ability": "4.1.5",
+    "@casl/ability": "4.1.6",
     "@casl/react": "2.1.1",
     "@rehooks/component-size": "1.0.3",
     "@types/apollo-upload-client": "8.1.3",
-    "@types/chart.js": "2.9.22",
-    "@types/jquery": "3.5.0",
-    "@types/jsdom": "16.2.3",
-    "@types/lodash": "4.14.159",
-    "@types/mixpanel-browser": "2.35.3",
-    "@types/react": "16.9.41",
+    "@types/chart.js": "2.9.28",
+    "@types/jquery": "3.5.4",
+    "@types/jsdom": "16.2.5",
+    "@types/lodash": "4.14.165",
+    "@types/mixpanel-browser": "2.35.4",
+    "@types/react": "16.9.56",
     "@types/react-bootstrap": "0.32.21",
-    "@types/react-burger-menu": "2.6.1",
-    "@types/react-dom": "16.9.8",
+    "@types/react-burger-menu": "2.6.2",
+    "@types/react-dom": "16.9.9",
     "@types/react-fontawesome": "1.6.4",
     "@types/react-notification-system": "0.2.39",
     "@types/react-redux": "7.1.7",
     "@types/react-router": "5.1.8",
-    "@types/react-router-dom": "5.1.5",
-    "@types/react-syntax-highlighter": "11.0.4",
+    "@types/react-router-dom": "5.1.6",
+    "@types/react-syntax-highlighter": "13.5.0",
     "@types/react-tag-input": "6.1.2",
     "@types/react-textarea-autosize": "4.3.5",
     "@types/redux-form": "8.2.3",
     "@types/revalidate": "1.1.2",
     "@types/sjcl": "1.0.29",
-    "@types/styled-components": "5.1.3",
-    "@types/topojson-client": "3.0.0",
+    "@types/styled-components": "5.1.4",
     "@types/webpack-bugsnag-plugins": "1.4.0",
-    "@types/yargs": "15.0.5",
     "apollo-cache-inmemory": "1.6.6",
     "apollo-client": "2.6.10",
     "apollo-link": "1.2.14",
@@ -56,105 +54,102 @@
     "apollo-utilities": "1.3.4",
     "bootstrap": "3.4.1",
     "bootstrap-switch-button-react": "1.2.0",
-    "chart.js": "2.9.3",
+    "chart.js": "2.9.4",
     "chartjs-plugin-doughnutlabel": "2.0.3",
     "font-awesome": "4.7.0",
-    "graphql": "14.6.0",
-    "graphql-tag": "2.10.3",
-    "i18next": "19.5.2",
+    "graphql": "14.7.0",
+    "graphql-tag": "2.11.0",
+    "i18next": "19.8.4",
     "jquery": "3.5.1",
     "jquery-comments_brainkit": "1.2.8",
     "jsdom": "16.4.0",
     "lodash": "4.17.20",
-    "mixpanel-browser": "2.38.0",
-    "moment": "2.27.0",
-    "react": "16.13.1",
+    "mixpanel-browser": "2.39.0",
+    "moment": "2.29.1",
+    "react": "16.14.0",
     "react-apollo-network-status": "4.0.1",
     "react-bootstrap": "0.33.1",
     "react-bootstrap-table-next": "4.0.3",
     "react-bootstrap-table2-filter": "1.3.3",
     "react-bootstrap-table2-paginator": "2.0.3",
     "react-bootstrap-table2-toolkit": "2.1.3",
-    "react-burger-menu": "2.6.17",
-    "react-chartjs-2": "2.9.0",
+    "react-burger-menu": "2.9.0",
+    "react-chartjs-2": "2.11.1",
     "react-circular-progressbar": "2.0.3",
-    "react-datetime": "2.16.3",
+    "react-datetime": "3.0.4",
     "react-dnd": "5.0.0",
     "react-dnd-html5-backend": "3.0.2",
-    "react-dom": "16.13.1",
+    "react-dom": "16.14.0",
     "react-fontawesome": "1.7.1",
-    "react-i18next": "11.7.0",
+    "react-i18next": "11.7.3",
     "react-image-lightbox": "5.1.1",
-    "react-media": "1.9.2",
+    "react-media": "1.10.0",
     "react-notification-system": "0.4.0",
-    "react-phone-input-2": "2.13.7",
+    "react-phone-input-2": "2.13.9",
     "react-redux": "7.2.0",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
-    "react-scroll-up": "1.3.3",
-    "react-svg": "11.0.28",
-    "react-syntax-highlighter": "12.2.1",
+    "react-scroll-up": "1.3.5",
+    "react-svg": "11.1.1",
+    "react-syntax-highlighter": "15.3.0",
     "react-tag-input": "6.4.3",
-    "react-textarea-autosize": "7.0.4",
-    "react-toastify": "6.0.6",
+    "react-textarea-autosize": "8.3.0",
+    "react-toastify": "6.1.0",
     "redux": "4.0.5",
     "redux-form": "8.3.2",
     "revalidate": "1.2.0",
     "sjcl": "1.0.8",
-    "styled-components": "5.2.0",
-    "subscriptions-transport-ws": "0.9.16",
-    "tachyons": "4.12.0",
-    "topojson-client": "3.1.0",
-    "yargs": "15.3.1"
+    "styled-components": "5.2.1",
+    "subscriptions-transport-ws": "0.9.18",
+    "tachyons": "4.12.0"
   },
   "devDependencies": {
     "@apollo/react-testing": "3.1.4",
-    "@types/enzyme": "3.10.5",
+    "@types/enzyme": "3.10.8",
     "@types/enzyme-adapter-react-16": "1.0.6",
-    "@types/jest": "26.0.10",
-    "@types/mini-css-extract-plugin": "0.9.1",
+    "@types/jest": "26.0.15",
+    "@types/mini-css-extract-plugin": "1.2.1",
     "@types/optimize-css-assets-webpack-plugin": "5.0.1",
-    "@types/terser-webpack-plugin": "3.0.0",
+    "@types/terser-webpack-plugin": "4.2.0",
     "@types/webpack": "4.41.25",
-    "@types/webpack-dev-server": "3.11.0",
+    "@types/webpack-dev-server": "3.11.1",
     "@typescript-eslint/eslint-plugin": "3.5.0",
     "@typescript-eslint/parser": "3.5.0",
-    "css-loader": "3.6.0",
+    "css-loader": "5.0.1",
     "enzyme": "3.11.0",
-    "enzyme-adapter-react-16": "1.15.3",
-    "eslint": "7.3.1",
-    "eslint-config-prettier": "6.11.0",
+    "enzyme-adapter-react-16": "1.15.5",
+    "eslint": "7.13.0",
+    "eslint-config-prettier": "6.15.0",
     "eslint-plugin-fp": "2.3.0",
-    "eslint-plugin-import": "2.22.0",
-    "eslint-plugin-jest": "23.17.1",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jest": "24.1.3",
     "eslint-plugin-jest-formatting": "2.0.0",
-    "eslint-plugin-jsx-a11y": "6.3.1",
+    "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-prettier": "3.1.4",
-    "eslint-plugin-react": "7.20.3",
-    "eslint-plugin-react-hooks": "4.0.5",
+    "eslint-plugin-react": "7.21.5",
+    "eslint-plugin-react-hooks": "4.2.0",
     "fetch-mock": "9.10.7",
-    "file-loader": "6.0.0",
+    "file-loader": "6.2.0",
     "identity-obj-proxy": "3.0.0",
-    "jest": "26.4.2",
-    "jest-canvas-mock": "2.2.0",
-    "mini-css-extract-plugin": "0.9.0",
+    "jest": "26.6.3",
+    "jest-canvas-mock": "2.3.0",
+    "mini-css-extract-plugin": "1.3.1",
     "mockdate": "3.0.2",
-    "open": "7.0.4",
-    "optimize-css-assets-webpack-plugin": "5.0.3",
-    "prettier": "2.0.5",
-    "terser-webpack-plugin": "3.0.6",
-    "ts-jest": "26.2.0",
-    "ts-loader": "7.0.5",
-    "ts-node": "8.10.2",
+    "optimize-css-assets-webpack-plugin": "5.0.4",
+    "prettier": "2.1.2",
+    "terser-webpack-plugin": "4.2.3",
+    "ts-jest": "26.4.4",
+    "ts-loader": "8.0.11",
+    "ts-node": "9.0.0",
     "tslint": "6.1.2",
     "tslint-react": "5.0.0",
     "typed-css-modules": "0.6.4",
-    "typescript": "3.9.6",
+    "typescript": "4.0.5",
     "waait": "1.0.5",
     "wait-for-expect": "3.0.2",
-    "webpack": "4.43.0",
+    "webpack": "4.44.2",
     "webpack-bugsnag-plugins": "1.4.3",
-    "webpack-cli": "3.3.12",
+    "webpack-cli": "4.2.0",
     "webpack-dev-server": "3.11.0"
   },
   "scripts": {
