sorts\feat(build): #3687.8 batch jobs to extract features
- Create jobs in AWS Batch that extract the features from every
  group in Services and saves the result to S3.


Former-commit-id: 06f04682b4ee021fab2647532ff3c98b15a2ab7d

--- a/sorts/.gitlab-ci.yml
+++ b/sorts/.gitlab-ci.yml
@@ -84,3 +84,8 @@ sorts_deploy_to_pypi:
   <<: *with_nix
   <<: *sorts_in_master_branch_code_changes
   stage: deploy-app
+
+sorts_extract_all_features_on_aws:
+  <<: *with_nix
+  <<: *sorts_in_master_branch
+  stage: external
