--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -57,7 +57,6 @@ cfn-flip = "1.2.3"
 click = "7.1.2"
 confuse = "1.3.0"
 frozendict = "1.2"
-# graphviz = overridenPyPkgPyGraphviz
 jmespath = "0.10.0"
 lark-parser = "0.7.8"
 metaloaders = "20.9.2566091"
@@ -65,6 +64,10 @@ more-itertools = "8.4.0"
 networkx = "2.5"
 oyaml = "0.9"
 pillow = "7.2.0"
+# Stated here so it works outside of Nix
+# Requires: libgraphviz-dev
+# Overriden in Nix by overridenPyPkgPyGraphviz
+pygraphviz = "1.5"
 pyparsing = "2.4.7"
 python = "^3.8"
 python-dateutil = "2.8.1"
