--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -82,6 +82,7 @@ uvloop = "0.14.0"
 [tool.poetry.dev-dependencies]
 bandit = "1.6.2"
 mypy = "0.782"
+mypy_extensions = "0.4.3"
 pdoc3 = "0.8.4"
 prospector = "1.3.0"
 pydeps = "1.9.4"
