--- a/skims/settings.cfg
+++ b/skims/settings.cfg
@@ -1,5 +1,9 @@
 [mypy]
 disallow_any_generics = false
+disallow_subclassing_any = false
+disallow_untyped_calls = false
+disallow_untyped_decorators = false
 ignore_missing_imports = true
 pretty = true
 strict = true
+warn_return_any = false
