observes\feat(cross): #3710.3 lint and test
- added lint and test jobs and provisioners
- lint fixes
- added auth tests


Former-commit-id: af6b9c85ad4ef2e549c4114440859e551b58b439

--- a/observes/.gitlab-ci.yml
+++ b/observes/.gitlab-ci.yml
@@ -127,6 +127,11 @@ observes_tredshift_test:
   <<: *observes_in_dev_branch
   stage: test-code
 
+observes_zoho_crm_lint:
+  <<: *with_nix
+  <<: *observes_in_dev_branch
+  stage: lint-code
+
 observes_code_lint:
   <<: *with_nix
   <<: *observes_in_dev_branch
