observes\feat(cross): #3710.4 access token
- get access token
- added tests to ci and poetry lock
- no-deltas-test


Former-commit-id: b9ac45d78cce204447bc9cd36f01696df95c903c

--- a/observes/.gitlab-ci.yml
+++ b/observes/.gitlab-ci.yml
@@ -132,6 +132,11 @@ observes_zoho_crm_lint:
   <<: *observes_in_dev_branch
   stage: lint-code
 
+observes_zoho_crm_test:
+  <<: *with_nix
+  <<: *observes_in_dev_branch
+  stage: lint-code
+
 observes_code_lint:
   <<: *with_nix
   <<: *observes_in_dev_branch
