skims\feat(back): #3715.3 reduce to custom text
- Add some gitignores
- Refactor the graph calls so they are re-utilized across
  functions
- Reduce ClassType_lf_classOrInterfaceType to a CustomText
  node


Former-commit-id: 32577598068cc161a68618ce200b6d0bbd2a17ac

--- a/skims/.gitignore
+++ b/skims/.gitignore
@@ -10,6 +10,9 @@
 /**/.coverage*
 /**/.skims
 /**/.venv
+/**/log
+/**/log.model.json
+/**/log.svg
 /coverage*
 /docs/skims
 /dist
@@ -25,4 +28,5 @@
 /static/parsers/babel/node_modules/
 /static/parsers/babel/package-lock.json
 /test/**/*.yaml.json
+/test/data/config/*.dev.yaml
 /test/outputs/
