integrates\fix(back): #3718 change old paths
- Since the backend was moved we must update the paths.


Former-commit-id: 66f07977e66b45a2f6d803b72ba531ce203d1477

--- a/integrates/.gitignore
+++ b/integrates/.gitignore
@@ -30,9 +30,9 @@ coverage.xml
 build/coverage
 
 # Django apps
-django-apps/**/*.egg-info
-django-apps/**/build
-django-apps/**/dist
+backend_new/packages/**/*.egg-info
+backend_new/packages/**/build
+backend_new/packages/**/dist
 backend_new/packages/integrates-back/backend/reports/results/results_pdf/*.pdf
 backend_new/packages/integrates-back/backend/reports/results/results_excel/*.xlsx
 backend_new/packages/integrates-back/backend/reports/tpls/*.tpl
