--- a/observes/common/postgres_client/pyproject.toml
+++ b/observes/common/postgres_client/pyproject.toml
@@ -1,16 +1,15 @@
 [tool.poetry]
-name = "target_redshift_2"
+name = "postgres_client"
 version = "0.1.0"
 description = ""
 authors = ["Product Team <development@fluidattacks.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-postgres-client = {path = "../../common/postgres_client"}
+psycopg2 = "2.8.6"
 
 [tool.poetry.dev-dependencies]
 pytest = "5.2"
-pylint = "2.6.0"
 mypy = "0.790"
 
 [build-system]
