skims\feat(back): #3680.7 export all graph types
- Also favor determinism by using g.adj, this fix some
  line and column numbers
- Now we can see just the AST or just the CFG, which is nice
  because all that info is sometimes too much


Former-commit-id: 90905939f956fcc0beaad1f3f9b633274c48e1f0

--- a/skims/.gitignore
+++ b/skims/.gitignore
@@ -11,6 +11,10 @@
 /**/.skims
 /**/.venv
 /**/log
+/**/log.ast
+/**/log.ast.svg
+/**/log.cfg
+/**/log.cfg.svg
 /**/log.model.json
 /**/log.svg
 /coverage*
