integrates\feat(front): #3662.5 add removegroup modal
- Add remove group modal


Former-commit-id: ed1f659a954ffc26a858d35aea8ea669ba896a9e

--- a/integrates/front/.eslintignore
+++ b/integrates/front/.eslintignore
@@ -13,5 +13,6 @@ src/scenes/Dashboard/**/*.*
 !src/scenes/Dashboard/components/NewsWidget/**
 !src/scenes/Dashboard/components/AddFilesModal/**
 !src/scenes/Dashboard/containers/GroupScopeView/**
+!src/scenes/Dashboard/components/DeleteGroupModal/**
 src/**/*.css.d.ts
 src/**/*.d.ts
