observes\feat(back): #3710.8 persistent bulk jobs
- added db module
- addded new dependencies


Former-commit-id: 30f19be7efd89b3df948c2dca1e813b5e8cb2d8b

--- a/observes/etl/zoho_crm_etl/pyproject.toml
+++ b/observes/etl/zoho_crm_etl/pyproject.toml
@@ -8,10 +8,12 @@ authors = ["Product Team <development@fluidattacks.com>"]
 python = "3.8.5"
 requests = "2.25.0"
 click = "7.1.2"
+postgres-client = {path = "../../common/postgres_client"}
 
 [tool.poetry.dev-dependencies]
 pytest = "5.2"
 mypy = "0.790"
+pytest-postgresql = "2.5.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
