--- a/observes/etl/zoho_crm_etl/pyproject.toml
+++ b/observes/etl/zoho_crm_etl/pyproject.toml
@@ -9,6 +9,7 @@ python = "3.8.5"
 requests = "2.25.0"
 click = "7.1.2"
 postgres-client = {path = "../../common/postgres_client"}
+ratelimiter = "1.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "5.2"
