integrates\fix(back): #3734 add new route to starlette
- Add logout to starlette, and use ingress to redirect it.


Former-commit-id: 7b17526720bdb9e9ed28bdef5b0ce3c8f2102f9f

--- a/integrates/deploy/production/ingress.yaml
+++ b/integrates/deploy/production/ingress.yaml
@@ -37,6 +37,10 @@ spec:
             backend:
               serviceName: integrates-master
               servicePort: 81
+          - path: /logout
+            backend:
+              serviceName: integrates-master
+              servicePort: 81
           - path: /new/*
             backend:
               serviceName: integrates-master
