--- a/integrates/deploy/ephemeral/ingress.yaml
+++ b/integrates/deploy/ephemeral/ingress.yaml
@@ -37,6 +37,10 @@ spec:
             backend:
               serviceName: integrates-__DEPLOYMENT_NAME__
               servicePort: 81
+          - path: /logout
+            backend:
+              serviceName: integrates-__DEPLOYMENT_NAME__
+              servicePort: 81
           - path: /new/*
             backend:
               serviceName: integrates-__DEPLOYMENT_NAME__
