--- a/observes/.gitlab-ci.yml
+++ b/observes/.gitlab-ci.yml
@@ -135,7 +135,7 @@ observes_zoho_crm_lint:
 observes_zoho_crm_test:
   <<: *with_nix
   <<: *observes_in_dev_branch
-  stage: lint-code
+  stage: test-code
 
 observes_code_lint:
   <<: *with_nix
