--- a/observes/etl/zoho_crm_etl/pyproject.toml
+++ b/observes/etl/zoho_crm_etl/pyproject.toml
@@ -15,6 +15,7 @@ ratelimiter = "1.2.0"
 pytest = "5.2"
 mypy = "0.790"
 pytest-postgresql = "2.5.2"
+prospector = "1.3.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
